tests/semantic/valid/while_block.c
/*
 * Multi-line comment.
 */

#include <stdint.h>
#include <stdio.h>

int32_t main(int32_t, char argv) {
    int8_t a = 1;
    int8_t b = 2;
    int8_t c = 4;

    while (1) {
        1;
        2;
        3;
    }

}